--- a/kubernetes/crashloop_pod.yml
+++ b/kubernetes/crashloop_pod.yml
@@ -1,12 +1,20 @@
 # example pod that will crashloop for integration test of CrashLoopBackOffRescheduler
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: busybox
-  annotations:
-    kube-remediator/CrashLoopBackOffRemediator: "true"
 spec:
-  containers:
-    - image: busybox
-      name: busybox
-      command: ["this-is-bad"]
+  selector:
+    matchLabels:
+      busybox: "true"
+  template:
+    metadata:
+      labels:
+        busybox: "true"
+      annotations:
+        kube-remediator/CrashLoopBackOffRemediator: "true"
+    spec:
+      containers:
+        - image: busybox
+          name: busybox
+          command: ["this-is-bad"]
