--- a/kubernetes/app-server.yaml
+++ b/kubernetes/app-server.yaml
@@ -22,6 +22,7 @@ spec:
       serviceAccountName: monitor-pods-acc
       containers:
         - name: remediator
+          image: "ghcr.io/ankilosaurus/kube_remediator:1.2.3"
           securityContext:
             runAsNonRoot: true
             readOnlyRootFilesystem: true
