--- a/kubernetes/app-server.yaml
+++ b/kubernetes/app-server.yaml
@@ -22,7 +22,7 @@ spec:
       serviceAccountName: monitor-pods-acc
       containers:
         - name: remediator
-          image: "ghcr.io/ankilosaurus/kube_remediator:1.2.3"
+          image: "ghcr.io/ankilosaurus/kube_remediator:latest"
           securityContext:
             runAsNonRoot: true
             readOnlyRootFilesystem: true
