--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,7 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17 # keep in sync with Dockerfile / .go-version / go.mod
+        go-version: "1.20" # keep in sync with Dockerfile / .go-version / go.mod
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Test
